<resources>
    <string name="app_name">Cupcake from scratch</string>
    <string name="order_cupcakes">Order Cupcakes</string>
    <string name="one_cupcake">One Cupcake</string>
    <string name="six_cupcakes">Six cupcakes</string>
    <string name="twelve_cupcakes">Twelve cupcakes</string>
    <string name="vanilla">Vanilla</string>
    <string name="chocolate">Chocolate</string>
    <string name="red_velvet">Red Velvet</string>
    <string name="salted_caramel">Salted Caramel</string>
    <string name="coffee">Coffee</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="subtotal">Subtotal %s</string>
    <string name="quantity">QUANTITY</string>
    <string name="quantity_val">1</string>
    <string name="flavor_display">flavor</string>
    <string name="flavor">Vanilla</string>
    <string name="pickup_display">Pickup date</string>
    <string name="pickup">Sun Sep 5</string>
    <string name="total">Total %s</string>
    <string name="send_order">Send order to another app</string>
    <plurals name="cupcakes">
        <item quantity="one">%d cupcake</item>
        <item quantity="other">%d cupcakes</item>
    </plurals>
</resources>