<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StarterFragment">

        <ImageView
            android:id="@+id/cupcake_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:layout_marginTop="100dp"
            android:src="@drawable/cupcake"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/order_cupcakes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/order_cupcakes"
            android:textAppearance="?attr/textAppearanceHeadline4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cupcake_image" />

        <Button
            android:id="@+id/one_cupcake"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/one_cupcake"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/order_cupcakes" />

        <Button
            android:id="@+id/six_cupcakes"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/six_cupcakes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/one_cupcake" />

        <Button
            android:id="@+id/twelve_cupcakes"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/twelve_cupcakes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/six_cupcakes" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>






