<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.cupcakefromscratch.model.SharedViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FlavorFragment">

        <RadioGroup
            android:id="@+id/flavors_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/vanilla"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:checked="@{viewModel.flavor.equals(@string/vanilla)}"
                android:hint="@string/vanilla"
                android:onClick="@{() -> viewModel.setFlavor(@string/vanilla)}"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <RadioButton
                android:id="@+id/chocolate"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:checked="@{viewModel.flavor.equals(@string/chocolate)}"
                android:hint="@string/chocolate"
                android:onClick="@{() -> viewModel.setFlavor(@string/chocolate)}"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <RadioButton
                android:id="@+id/red_velvet"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:checked="@{viewModel.flavor.equals(@string/red_velvet)}"
                android:hint="@string/red_velvet"
                android:onClick="@{() -> viewModel.setFlavor(@string/red_velvet)}"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <RadioButton
                android:id="@+id/salted_caramel"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:checked="@{viewModel.flavor.equals(@string/salted_caramel)}"
                android:hint="@string/salted_caramel"
                android:onClick="@{() -> viewModel.setFlavor(@string/salted_caramel)}"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <RadioButton
                android:id="@+id/coffee"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:checked="@{viewModel.flavor.equals(@string/coffee)}"
                android:hint="@string/coffee"
                android:onClick="@{() -> viewModel.setFlavor(@string/coffee)}"
                android:textAppearance="?attr/textAppearanceHeadline6" />

        </RadioGroup>

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flavors_group"
            android:background="#bbb" />

        <TextView
            android:id="@+id/subtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:text="@{@string/subtotal(viewModel.price)}"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="?attr/materialButtonOutlinedStyle"
            android:text="@string/cancel"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/next_button"
            app:layout_constraintTop_toBottomOf="@id/subtotal" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cancel_button"
            app:layout_constraintTop_toTopOf="@id/cancel_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>